[package]
name = "esp-pn532"
version = "0.1.0"
authors = ["20932774 <OAObraztsov@sberbank.ru>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp32s2-hal = { path = "esp-hal/esp32s2-hal" }
esp-backtrace = { version = "0.9.0", features = ["esp32s2", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.0", features = ["esp32s2","log"] }
log = { version = "0.4.18" }
esp-alloc = { version = "0.3.0" }
esp-wifi  = { git = "https://github.com/esp-rs/esp-wifi/", rev = "7632e74", features = ["esp32s2", "wifi"] }
smoltcp = { version = "0.10.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.25.0", default-features = false, features = [] }
embedded-io = "0.4.0"
heapless = { version = "0.7.14", default-features = false }
pn532 = { path = "pn532" }
embedded-hal = { version = "0.2.7"}
fugit = "0.3.7"
format_no_std = "1.0.0"
